# nhentai_fetcher

./: .gitignore  Cargo.toml  README.md
nh_fetcher/: Cargo.toml
nh_fetcher/src/: lib.rs
src/: main.rs
