[package]
name = "nh_fetcher"
version = "0.1.0"
authors = ["Valink16"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.9.19"
image = "0.20.0"
printpdf = "0.2.11"
log = "0.4.8"
indicatif = "0.11.0"
dialoguer = "0.4.0"
select = { path = "../select.rs-0.4.3" }